--- a/src/assets/styles/tailwind.css
+++ b/src/assets/styles/tailwind.css
@@ -598,6 +598,10 @@ video {
 	margin-left: 0.5rem;
 	margin-right: 0.5rem;
 }
+.mx-11{
+	margin-left: 2.75rem;
+	margin-right: 2.75rem;
+}
 .ml-2{
 	margin-left: 0.5rem;
 }
@@ -681,6 +685,9 @@ video {
 }
 .ml-3{
 	margin-left: 0.75rem;
+}
+.mt-3{
+	margin-top: 0.75rem;
 }
 .block{
 	display: block;
@@ -790,6 +797,15 @@ video {
 }
 .gap-3{
 	gap: 0.75rem;
+}
+.gap-16{
+	gap: 4rem;
+}
+.gap-20{
+	gap: 5rem;
+}
+.gap-12{
+	gap: 3rem;
 }
 .overflow-y-auto{
 	overflow-y: auto;
@@ -1006,6 +1022,12 @@ video {
 .pl-1{
 	padding-left: 0.25rem;
 }
+.pr-12{
+	padding-right: 3rem;
+}
+.pr-10{
+	padding-right: 2.5rem;
+}
 .text-center{
 	text-align: center;
 }
@@ -1035,6 +1057,10 @@ video {
 	font-size: 1.125rem;
 	line-height: 1.75rem;
 }
+.text-xl{
+	font-size: 1.25rem;
+	line-height: 1.75rem;
+}
 .font-black{
 	font-weight: 900;
 }
@@ -1043,6 +1069,9 @@ video {
 }
 .font-bold{
 	font-weight: 700;
+}
+.font-semibold{
+	font-weight: 600;
 }
 .lowercase{
 	text-transform: lowercase;
@@ -1097,6 +1126,10 @@ video {
 .text-black{
 	--tw-text-opacity: 1;
 	color: rgba(0, 0, 0, var(--tw-text-opacity));
+}
+.text-indigo-900{
+	--tw-text-opacity: 1;
+	color: rgba(49, 46, 129, var(--tw-text-opacity));
 }
 .underline{
 	text-decoration: underline;
@@ -2808,6 +2841,9 @@ video {
 	}
 	.md\:pl-28{
 		padding-left: 7rem;
+	}
+	.md\:pr-12{
+		padding-right: 3rem;
 	}
 }
 @media (min-width: 1024px){
